--- a/app/global.css
+++ b/app/global.css
@@ -7,7 +7,9 @@
   --navbar-bg: rgba(0, 0, 0, 0.751); /* 60% opacity */
 }
 
-
+#nd-home-layout{
+  background: black !important;
+}
 
 
 @layer components {
@@ -21,9 +23,9 @@
       border-radius: 0px !important;
       position: fixed !important;
       top: -8px !important;
-      background-color: var(--navbar-bg);
+      background-color: var(--navbar-bg) !important;
       /* backdrop-filter: blur(100px); Adjust the blur strength  */
-      
+
       /* background-color: black !important; */
       padding: 5px !important;
     }
